# smokey-bbq

./: .gitignore  CMakeLists.txt  README.md
common/: opengl.hpp  shaderLoader.cpp  shaderLoader.h
lib/glew/: CMakeLists.txt
lib/glfw/lib/: libGLEW.so.2.0.0
lib/imgui/: imgui_impl_glfw_gl3.cpp
lib/portaudio/libs/: libportaudio.la  libportaudio.lai  libportaudio.so.2.0.0
resources/shaders/: Advect.glsl  CurlFragmentShader.glsl  DensityFragmentShader.glsl  DensityVertexShader.glsl  SimpleFragmentShader.fs  SimpleFragmentShader.glsl  SimpleVertexShader.vs  SmokeFragmentShader.glsl  SmokeVertexShader.glsl  TemperatureFragmentShader.glsl  Vertex.glsl  advect.glsl  advection.glsl  applyImpulse.glsl  applyPressure.glsl  applyVorticityConfinement.glsl  computeCurl.glsl  computeDivergence.glsl  jacobi.glsl
resources/shaders/compositions/: RgbFragmentShader.glsl  SmokeFragmentShader.glsl
resources/shaders/fields/: CurlFragmentShader.glsl  DensityFragmentShader.glsl  VelocityFragmentShader.glsl
resources/shaders/programs/: advect.glsl  applyBuoyancy.glsl  applyVorticityConfinement.glsl  computeCurl.glsl  computeDivergence.glsl  vertexShader.glsl
src/: audio_analyzer.cpp  audio_analyzer.hpp  audio_analyzer_gui.cpp  audio_analyzer_gui.hpp  main.cpp  main.hpp  manager.cpp  manager.hpp  manager_gui.cpp  manager_gui.hpp  smoke_simulation.cpp  smoke_simulation.hpp  smoke_simulation_cpu.cpp  smoke_simulation_gpu.cpp  smoke_simulation_gui.cpp  smoke_simulation_gui.hpp
src/audio_analyzer/: audio_analyzer.cpp  audio_analyzer.hpp  audio_analyzer_gui.cpp  audio_analyzer_gui.hpp
src/compositions/: circular_spectrum.cpp  circular_spectrum.hpp  composition.cpp  composition.hpp  horizontal_spectrum.cpp  horizontal_spectrum.hpp  rgb_spectrum.cpp  rgb_spectrum.hpp
src/smoke_simulation/: smoke_simulation.cpp  smoke_simulation.hpp  smoke_simulation_cpu.cpp  smoke_simulation_gpu.cpp  smoke_simulation_gui.cpp  smoke_simulation_gui.hpp
